--- a/infrastructure/crds/elasticcontroller-1.0.2.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.2.yaml
@@ -642,6 +642,8 @@ spec:
                   type: string
                 keyvaultsecret:
                   type: string
+                k8snamespace:
+                  type: string
                 k8ssecret:
                   type: string
                 k8skey:
