--- a/charts/elasticoperator/templates/clusterrole-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrole-operator.yaml
@@ -55,6 +55,7 @@ rules:
       - dataviews
       - connectors
       - alertrules
+      - syncobjects
     verbs: ["get","watch","list" ]
   - apiGroups:
         - ""
