--- a/charts/elasticoperator/templates/clusterrole-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrole-operator.yaml
@@ -55,7 +55,7 @@ rules:
       - dataviews
       - connectors
       - alertrules
-      - syncobjects
+      - syncsecrets
     verbs: ["get","watch","list" ]
   - apiGroups:
         - ""
