--- a/charts/elasticoperator/templates/clusterrole-view.yaml
+++ b/charts/elasticoperator/templates/clusterrole-view.yaml
@@ -34,5 +34,5 @@ rules:
       - dataviews
       - connectors
       - alertrules
-      - syncobjects
+      - syncsecrets
     verbs: ["get","watch","list" ]
