--- a/clusters/dev/eck-license/releases.yaml
+++ b/clusters/dev/eck-license/releases.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: elastic-license
+  name: eck-license
   namespace: observability
 spec:
-  releaseName: elastic-license
+  releaseName: eck-license
   targetNamespace: observability
   chart:
     spec:
-      chart: ./charts/elastic-license
+      chart: ./charts/eck-license
       reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
