--- a/charts/eck-license/templates/eck-license.yaml
+++ b/charts/eck-license/templates/eck-license.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{.Release.Name}}
   namespace: {{ .Release.Namespace}}
 spec:
-  keyvaultsecret: threehour
+  keyvaultsecret: eck-license
   k8snamespace: system
   k8ssecret: eck-license
   k8stype: opaque
