--- a/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrolebinding.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrolebinding.yaml
@@ -10,6 +10,6 @@ subjects:
   namespace: {{ .Release.Namespace}}
 roleRef:
   kind: ClusterRole
-  name: metricbeat
+  name: {{ .Release.Name}}-metricbeat
   apiGroup: rbac.authorization.k8s.io
 {{ end }}
