--- a/charts/elastic-cluster/charts/cluster/templates/kibana-networkpolicy.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/kibana-networkpolicy.yaml
@@ -30,3 +30,10 @@ spec:
       ports:
       - protocol: TCP
         port: 5601
+    - from:
+      - podSelector:
+          matchLabels:
+            beat.k8s.elastic.co/name: {{ .Release.Name}}-metricbeat
+      ports:
+      - port: 5601
+        protocol: TCP          
