--- a/charts/elastic-cluster/charts/roles/Chart.yaml
+++ b/charts/elastic-cluster/charts/roles/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: roles
-description: roles
+description: role
 
 # A chart can be either an 'application' or a 'library' chart.
 #
