--- a/charts/elastic-monitoring/templates/filebeat-clusterrole.yaml
+++ b/charts/elastic-monitoring/templates/filebeat-clusterrole.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Release.Name}}-filebeat-{{ .Values.Instance}}
+  name: {{ .Release.Name}}-filebeat
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources:
