--- a/charts/elastic-monitoring/templates/filebeat-clusterrolebinding.yaml
+++ b/charts/elastic-monitoring/templates/filebeat-clusterrolebinding.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name}}-filebeat-{{ .Values.Instance}}
+  name: {{ .Release.Name}}-filebeat
   namespace: {{ .Release.Namespace}}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Release.Name}}-filebeat-{{ .Values.Instance}}
+  name: {{ .Release.Name}}-filebeat
   namespace: {{ .Release.Namespace}}
 roleRef:
   kind: ClusterRole
-  name: {{ .Release.Name}}-filebeat-{{ .Values.Instance}}
+  name: {{ .Release.Name}}-filebeat
   apiGroup: rbac.authorization.k8s.io
