--- a/charts/elastic-monitoring/templates/filebeat-sa.yaml
+++ b/charts/elastic-monitoring/templates/filebeat-sa.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Release.Name}}-filebeat-{{ .Values.Instance}}
+  name: {{ .Release.Name}}-filebeat
   namespace: {{ .Release.Namespace}}
 
