--- a/charts/elastic-monitoring/templates/filebeat.yaml
+++ b/charts/elastic-monitoring/templates/filebeat.yaml
@@ -66,6 +66,8 @@ spec:
             mountPath: /var/log/pods
           - name: varlibdockercontainers
             mountPath: /var/lib/docker/containers
+          - name: mypd
+            mountPath: /usr/share/filebeat/meta/data
           env:
             - name: NODE_NAME
               valueFrom:
@@ -81,3 +83,18 @@ spec:
         - name: varlibdockercontainers
           hostPath:
             path: /var/lib/docker/containers
+        - name: mypd
+          persistentVolumeClaim:
+            claimName: filebeat-data
+
+      volumeClaimTemplates:
+      - metadata:
+          name: filebeat-data 
+        spec:
+          accessModes:
+          - ReadWriteOnce
+          resources:
+            requests:
+              storage: 1gi
+          storageClassName: standard
+
