--- a/charts/elastic-logs/Chart.yaml
+++ b/charts/elastic-logs/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: elastic-monitoring
+name: elastic-logs
 description: filebeat deployment for logs collection
 
 type: application
 
-version: 0.1.6
+version: 0.1.7
 
 appVersion: "1.0.0"
