--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: elastic-monitoring
+  name: elastic-logs
   namespace: observability
 spec:
-  releaseName: elastic-monitoring
+  releaseName: elastic-logs
   targetNamespace: observability
   chart:
     spec:
-      chart: ./charts/elastic-monitoring
+      chart: ./charts/elastic-logs
       reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
