--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -15,4 +15,12 @@ spec:
         name: flux-elastic
         namespace: flux-system
   interval: 1m
+values:
 
+  elastic:
+    config: 
+      version: 8.3.1
+      monitoring:
+        enabled: true
+        cluster: cluster14
+        period: 10s
