--- a/charts/elastic-logs/templates/filebeat-clusterrole.yaml
+++ b/charts/elastic-logs/templates/filebeat-clusterrole.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elastic.config.monitoring.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -13,3 +14,4 @@ rules:
   - watch
   - list
 ---
+{{ end }}
