--- a/charts/elastic-logs/templates/filebeat-clusterrolebinding.yaml
+++ b/charts/elastic-logs/templates/filebeat-clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elastic.config.monitoring.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -11,3 +12,4 @@ roleRef:
   kind: ClusterRole
   name: {{ .Release.Name}}-filebeat
   apiGroup: rbac.authorization.k8s.io
+{{ end }}
