--- a/clusters/dev/cluster14/releases.yaml
+++ b/clusters/dev/cluster14/releases.yaml
@@ -169,6 +169,7 @@ spec:
       threehour: true
       sprint: true
       monitoring: true
+      clusterlogs: true
 
     kibanaspaces:
       metricbeat: false
@@ -182,3 +183,4 @@ spec:
 
     syncsecrets:
       monitoring: true
+      elasticlogs: true
