--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -20,7 +20,5 @@ spec:
     elastic:
       config: 
         version: 8.3.1
-        monitoring:
-          enabled: true
+        output:
           cluster: cluster14
-          period: 10s
