--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: elastic-logs
+  name: k8s-logs
   namespace: observability
 spec:
-  releaseName: elastic-logs
+  releaseName: k8s-logs
   targetNamespace: observability
   chart:
     spec:
@@ -19,7 +19,7 @@ spec:
 
     filebeat:
       config:
-        collect: container 
+        collect: containerlogs
         version: 8.3.1
         output:
           cluster: cluster14
