prepare to sync certs

--- a/infrastructure/crds/elasticcontroller-1.0.2.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.2.yaml
@@ -699,4 +699,6 @@ spec:
                   type: string
                 k8slabel:
                   type: string
+                destination:
+                  type: string
               required: ["name","body","cluster","secret","k8skey","k8stype"]
