--- a/clusters/dev/cluster14/kustomization.yaml
+++ b/clusters/dev/cluster14/kustomization.yaml
@@ -2,4 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - releases.yaml
-  
+spec:  
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: env    
