--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -1,25 +1,19 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata: 
-  name: k8s-logs
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: elastic-logs
   namespace: observability
 spec:
-  releaseName: k8s-logs
-  targetNamespace: observability
-  chart:
-    spec:
-      chart: ./charts/elastic-logs
-      reconcileStrategy: Revision
-      sourceRef:
-        kind: GitRepository
-        name: flux-elastic
-        namespace: flux-system
-  interval: 1m
-  values:
-
-    filebeat:
-      config:
-        collect: containerlogs
-        version: 8.3.1
-        output:
-          cluster: cluster14
+  interval: 10m0s
+  timeout: 5m0s
+  path: ./charts/elastic-logs
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-elastic
+    namespace: flux-system
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: env
