--- a/charts/eck-license/releases.yaml
+++ b/charts/eck-license/releases.yaml
@@ -8,7 +8,7 @@ spec:
   targetNamespace: observability
   chart:
     spec:
-      chart: ./charts/eck-license
+      chart: ./charts/charts/eck-license
       reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
