--- a/clusters/dev/eck-license/kustomization.yaml
+++ b/clusters/dev/eck-license/kustomization.yaml
@@ -1,5 +1,19 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
-resources:
-  - releases.yaml
-  
+metadata:
+  name: apps
+spec:
+  interval: 5m
+  path: "./charts/eck-license/"
+  postBuild:
+    substitute:
+      cluster_env: "prod"
+      cluster_region: "eu-central-1"
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-vars
+        # Use this ConfigMap if it exists, but proceed if it doesn't.
+        optional: true
+      - kind: Secret
+        name: cluster-secret-vars
+        # Fail if this Secret does not e
