--- a/clusters/dev/eck-license/kustomization.yaml
+++ b/clusters/dev/eck-license/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: apps
+  namespace: observability
 spec:
   interval: 5m
   path: "./charts/eck-license/"
@@ -11,7 +12,7 @@ spec:
       cluster_region: "eu-central-1"
     substituteFrom:
       - kind: ConfigMap
-        name: cluster-vars
+        name: env
         # Use this ConfigMap if it exists, but proceed if it doesn't.
         optional: true
       - kind: Secret
