--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -26,6 +26,8 @@ spec:
           namespace: observability
         spec:
           values:
+            topology: 
+              enabled: false
             filebeat:
               config: 
                 output:
