--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -19,19 +19,25 @@ spec:
         name: env
   patches:
     - patch: |-
-        apiVersion: helm.toolkit.fluxcd.io/v2beta1
-        kind: HelmRelease
-        metadata:
-          name: elastic-logs
-          namespace: observability
-        spec:
-          values:
-            topology: 
-              enabled: false
-            filebeat:
-              config: 
-                output:
-                  cluster: cluster14
+              apiVersion: helm.toolkit.fluxcd.io/v2beta1
+              kind: HelmRelease
+              metadata:
+                name: elastic-logs
+                namespace: observability
+              spec:
+                chart:
+                  spec:
+                    chart: ./charts/charts/elastic-logs
+                    sourceRef:
+                      kind: GitRepository
+                      name: flux-elastic
+                      namespace: flux-system
+                interval: 5m0s
+                releaseName: elastic-logs
+                targetNamespace: observability
+                values:
+                  topology:
+                    enabled: true
 
       target:
         kind: HelmRelease
