--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -18,19 +18,10 @@ spec:
       - kind: ConfigMap
         name: env
   patches:
-    - patch: |-
-        apiVersion: helm.toolkit.fluxcd.io/v2beta1
-        kind: HelmRelease
-        metadata:
-          name: elastic-logs
-          namespace: observability
-        spec:
-          values:
-            filebeat:
-              config: 
-                collect: containerlogs
+    - patch: |
+        - op: replace
+          path: /metadata/name
+          value: k8s-logs
 
       target:
         kind: HelmRelease
-        name: k8s-logs
-        namespace: observability
