--- a/charts/elastic-logs/release.yaml
+++ b/charts/elastic-logs/release.yaml
@@ -15,6 +15,31 @@ spec:
         namespace: flux-system
   interval: 5m0s
   values:
-    topology:
-      enabled: false
 
+    filebeat:
+      config: 
+        version: 8.3.1
+
+        collect: elasticlogs
+        image:
+          registry: docker.elastic.co
+          repository: beats/filebeat
+          imagepullpolicy: IfNotPresent    
+
+        securitycontext:
+          runasuser: 1000
+          fsgroup: 1000
+          runasnonroot: true
+        tolerations:
+          key: tier
+          value: application
+        nodeselector:
+          key: "tier"
+          value:  "application"
+        output:
+          cluster: none
+          apikey: apikey-elasticlogs
+          httpca: es-http-ca-internal
+          svc: 
+            - es-http
+          port: 9200      
