--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -18,10 +18,17 @@ spec:
       - kind: ConfigMap
         name: env
   patches:
-    - patch: |
-        - op: replace
-          path: /spec/values/topology/enabled
-          value: true
+    - patch:
+
+        apiVersion: helm.toolkit.fluxcd.io/v2beta1
+        kind: HelmRelease
+        spec:
+          values:
+            filebeat:
+              config:
+                output:
+                  cluster: test
+
 
       target:
         kind: HelmRelease
