--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -18,8 +18,7 @@ spec:
       - kind: ConfigMap
         name: env
   patches:
-    - patch:
-
+    - patch: |-
         apiVersion: helm.toolkit.fluxcd.io/v2beta1
         kind: HelmRelease
         spec:
@@ -28,7 +27,5 @@ spec:
               config:
                 output:
                   cluster: test
-
-
       target:
         kind: HelmRelease
