--- a/clusters/dev/elastic-logs/releases.yaml
+++ b/clusters/dev/elastic-logs/releases.yaml
@@ -22,6 +22,8 @@ spec:
         apiVersion: helm.toolkit.fluxcd.io/v2beta1
         kind: HelmRelease
         spec:
+          releaseName: elastic-logs
+          targetNamespace: observability        
           values:
             filebeat:
               config:
