--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -21,6 +21,9 @@ spec:
     - patch: |
         apiVersion: helm.toolkit.fluxcd.io/v2beta1
         kind: HelmRelease
+        metadata:
+          name: elastic-logs
+          namespace: observability
         spec:
           releaseName: k8s-logs
           targetNamespace: observability        
