--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -29,9 +29,32 @@ spec:
           targetNamespace: observability        
           values:
             filebeat:
-              config:
+              config: 
+                version: 8.3.1
+
+                collect: containerlogs
+                image:
+                  registry: docker.elastic.co
+                  repository: beats/filebeat
+                  imagepullpolicy: IfNotPresent    
+
+                securitycontext:
+                  runasuser: 1000
+                  fsgroup: 1000
+                  runasnonroot: true
+                tolerations:
+                  key: tier
+                  value: application
+                nodeselector:
+                  key: "tier"
+                  value:  "application"
                 output:
-                  cluster: test
+                  cluster: none
+                  apikey: apikey-elasticlogs
+                  httpca: es-http-ca-internal
+                  svc: 
+                    - es-http
+                  port: 9200             
 
       target:
         kind: HelmRelease
