--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -34,7 +34,7 @@ spec:
 
                 collect: containerlogs
                 output:
-                  cluster: none
+                  cluster: cluster14
                   apikey: apikey-elasticlogs
                   httpca: es-http-ca-internal
                   svc: 
